# app/common/request/user.go
@@ -15,3 +15,16 @@ func (register Register) GetMessages() ValidatorMessages {
 		"password.required": "用户密码不能为空",
 	}
 }
+
+type Login struct {
+	Mobile   string `form:"mobile" json:"mobile" binding:"required,mobile"`
+	Password string `form:"password" json:"password" binding:"required"`
+}
+
+func (login Login) GetMessages() ValidatorMessages {
+	return ValidatorMessages{
+		"mobile.required":   "手机号码不能为空",
+		"mobile.mobile":     "手机号码格式不正确",
+		"password.required": "用户密码不能为空",
+	}
+}
