# app/controllers/app/middleware/jwt.go
@@ -1,0 +1,42 @@
+package middleware
+
+import (
+	"github.com/dgrijalva/jwt-go"
+	"github.com/gin-gonic/gin"
+	"jassue-gin/app/common/response"
+	"jassue-gin/app/services"
+	"jassue-gin/global"
+)
+
+func JWTAuth(GuardName string) gin.HandlerFunc {
+	return func(c *gin.Context) {
+		tokenStr := c.Request.Header.Get("Authorization")
+		if tokenStr == "" {
+			response.TokenFail(c)
+			c.Abort()
+			return
+		}
+		tokenStr = tokenStr[len(services.TokenType)+1:]
+
+		// Token 解析校验
+		token, err := jwt.ParseWithClaims(tokenStr, &services.CustomClaims{}, func(token *jwt.Token) (interface{}, error) {
+			return []byte(global.App.Config.Jwt.Secret), nil
+		})
+		if err != nil {
+			response.TokenFail(c)
+			c.Abort()
+			return
+		}
+
+		claims := token.Claims.(*services.CustomClaims)
+		// Token 发布者校验
+		if claims.Issuer != GuardName {
+			response.TokenFail(c)
+			c.Abort()
+			return
+		}
+
+		c.Set("token", token)
+		c.Set("id", claims.Id)
+	}
+}
