# routes/api.go
@@ -3,9 +3,17 @@ package routes
 import (
 	"github.com/gin-gonic/gin"
 	"jassue-gin/app/controllers/app"
+	"jassue-gin/app/controllers/app/middleware"
+	"jassue-gin/app/services"
 )
 
 // SetApiGroupRoutes 定义 api 分组路由
 func SetApiGroupRoutes(router *gin.RouterGroup) {
 	router.POST("/auth/register", app.Register)
+	router.POST("/auth/login", app.Login)
+	authRouter := router.Group("").Use(middleware.JWTAuth(services.AppGuardName))
+	{
+		authRouter.POST("/auth/info", app.Info)
+	}
+
 }
